# AutoCoder

./: LICENSE  README.md  requirements.txt
Evaluation/: postprocess_mbpp.py  test_ds1000.py  test_humaneval.py  test_mbpp.py
Web_demo/: chatbot.py
Web_demo/code_interpreter/: AutoCoderInterpreter.py  BaseCodeInterpreter.py
Web_demo/json_dataset/: 32c57f1c-050b-4bf8-a6d3-aeacdd067728.json  598c72ad-a5e7-40e3-9884-b0862f73d3c9.json  edd4c8af-21e9-4157-aeac-71553471c96c.json
Web_demo/sandbox/cpp/: CMakeLists.txt  Dockerfile.cpp  compile_run.sh  script.cpp  test
Web_demo/sandbox/fortran/: Dockerfile.fortran  compile_run.sh  script.f90  test
Web_demo/sandbox/java/: Dockerfile.java  compile_run.sh  pom.xml
Web_demo/sandbox/java/src/main/java/: script.java
Web_demo/sandbox/python_0/: Dockerfile.python  script.py
Web_demo/sandbox/rust/: Cargo.toml  Dockerfile.rust  compile_run.sh  main.rs
